--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
     </div>
   </div>
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    <span id="r">&#174;</span>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="https://github.com/SilvioCalixto" target="_blank">SilviO CalixtO</a>.
   </div>
 </body>
 </html>
