--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
 
     </div>
     <div class="div2">
-      <h3>Victor Crest</h3> 
-      <p>26</p>
+      <h3>Victor Crest  26 </h3>
       <p>London</p>
       
     </div>
